<resources>
    <!--<string name="app_name">ELAN</string>-->

    <string name="font.opensans.bold">fonts/OpenSans-Bold.ttf</string>
    <string name="font.opensans_bolditalic">fonts/OpenSans-BoldItalic.ttf</string>
    <string name="font.opensans.extrabold">fonts/OpenSans-ExtraBold.ttf</string>
    <string name="font.opensans.italic">fonts/OpenSans-Italic.ttf</string>
    <string name="font.opensans.light">fonts/OpenSans-Light.ttf</string>
    <string name="font.opensans.lightitalic">fonts/OpenSans-LightItalic.ttf</string>
    <string name="font.opensans.regular">fonts/OpenSans-Regular.ttf</string>
    <string name="font.opensans.semibold">fonts/OpenSans-Semibold.ttf</string>
    <string name="font.opensans.semibolditalic">fonts/OpenSans-SemiboldItalic.ttf</string>

    <string name="toolbar_next">Next</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_accept">ACCEPT</string>

    <string name="register_toolbar_title">REGISTER</string>
    <string name="register_profile_firstname">First Name</string>
    <string name="register_profile_lastname">Last Name</string>
    <string name="register_profile_email">Email</string>
    <string name="register_profile_language">Language</string>
    <string name="register_profile_country">Country</string>
    <string name="register_profile_serial">Serial #</string>
    <string name="register_profile_purchased">Purchased</string>
    <string name="register_profile_location">Location</string>
    <string name="register_button_title">ACTIVATE</string>

    <string name="register_scan_dialog_title">Scan for nearby ELANs</string>
    <string name="register_scan_dialog_description">Please ensure your ELAN is on and near your phone.</string>

    <string name="home_title">DRIVESAFE™</string>
    <string name="home_breath_test">BREATH TEST</string>
    <string name="home_bac_estimation">BAC\nESTIMATION</string>
    <string name="home_history">HISTORY</string>
    <string name="home_information">INFORMATION</string>
    <string name="home_registered_button_title">Elan Registered</string>
    <string name="home_notregistered_button_title">Please register your ELAN</string>

    <string name="infomation_title">INFORMATION</string>
    <string name="infomation_description">Breath test results may be displayed on the ELAN tester in units of breath alcohol concentration (BrAC) or blood alcohol concentration (BAC).\n\nBrAC is directly proportional to BAC.\n\nEach person reacts uniquely to the consumption of alcohol and may become impaired at a point below the legal limit.\n\nBrAC/BAC may continue to rise for up to 2 hours after alcohol was last consumed.\n\nTake special care if a borderline result or a result close to the legal BrAC/BAC limit is indicated.\n\nIt may take 10 hours or more for an individual’s BrAC/BAC level to return to zero after a high BrAC/BAC level has been reached.\n\nIn this case, a further test should be carried out later in the day or on the following morning.</string>
    <string name="infomation_disclaimer"><u>DISCLAIMER</u></string>

    <string name="menu_disclaimer">DISCLAIMER</string>
    <string name="menu_contactus">CONTACT US</string>
    <string name="menu_help">HELP</string>

    <string name="contactus_description">For assistance please visit acs-corp.com or call your local authorized service provider.</string>

    <string name="bac_disclaimer_title">BAC ESTIMATOR</string>
    <string name="bac_disclaimer_description">Before using the blood alcohol calculator you must click the \"I Accept\" button to acknowledge that you have read and accept the following warnings:\n\nThe blood alcohol concentration determined by the calculator may not reflect physiological and other factors such as age, disease states and meal times.\n\nIt is dangerous to drive a vehicle or operate machinery after drinking alchohol. If you do so you assume full risk of injury and death to yourself and others.</string>

    <string name="bac_estimator_text">Please provide the following:</string>
    <string name="bac_estimator_age">Age</string>
    <string name="bac_estimator_gender">Gender</string>
    <string name="bac_estimator_height">Height</string>
    <string name="bac_estimator_weight">Weight</string>
    <string name="bac_estimator_in">in</string>
    <string name="bac_estimator_lbs">lbs</string>

    <string name="bac_estimator_checkbox_gender_female">F</string>
    <string name="bac_estimator_checkbox_gender_male">M</string>

    <string name="history_title">HISTORY</string>

    <string name="add_drink_description">Please add a drink to estimate your BAC levels.</string>
    <string name="add_drink_enable_description">Manually add alcohol consumption in case you don’t have the breathalyzer.</string>
    <string name="add_drink_volume_consumed">Volume consumed</string>
    <string name="add_drink_percentage">Percentage</string>
    <string name="add_drink_question">When did you drink alcohol?</string>
    <string name="add_drink_now">Now</string>
    <string name="add_drink_select_date_time">Select Date and Time</string>
    <string name="add_drink_percentage_unit">%</string>
    <string name="add_drink_ml">mL</string>
    <string name="add_drink_button">Add Drink</string>

    <string name="add_drink_save_drink_button">Save Drink</string>
    <string name="add_drink_edit_drink_button">Edit Drink</string>
    <string name="add_drink_delete_entry_button">Delete Entry</string>
    <string name="add_drink_delete_entry_dialog_title">Delete Entry</string>
    <string name="add_drink_delete_entry_dialog_description">Are you sure you want to delete this entry?</string>

    <string name="bac_estimation_title">BAC ESTIMATION</string>
    <string name="bac_estimation_units">Units: g/dL</string>

    <string name="bac_estimation_chart_legend">Blood Alcohol Content</string>

    <string name="main_register_dialog_title">Please register your ELAN</string>
    <string name="main_register_dialog_description">You need to register Elan to enable full functionality of the app.</string>
</resources>
