<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_firstname"
                    app:title = "@string/register_profile_firstname" />

                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_lastname"
                    app:title = "@string/register_profile_lastname" />

                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_email"
                    app:title = "@string/register_profile_email" />

                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_language"
                    app:setDropdown="true"
                    app:title = "@string/register_profile_language" />

                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_country"
                    app:setDropdown="true"
                    app:title = "@string/register_profile_country" />

                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_serial"
                    app:title = "@string/register_profile_serial" />

                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_purchased"
                    app:title = "@string/register_profile_purchased" />

                <com.alcoholcountermeasuresystems.android.elan.views.ProfileInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_location"
                    app:title = "@string/register_profile_location" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/blue_button_height"
                    android:weightSum="3"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/blue_button_margin"
                    android:layout_marginBottom="@dimen/blue_button_margin">

                    <Button
                        android:text="@string/register_button_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/button_register_activate"
                        style="@style/ButtonBlue"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>