<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BacEstimatorLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:text="@string/add_drink_description"
        android:layout_gravity="center_horizontal"
        style="@style/InfoTitleText"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_volume_consumed"
                    android:text="@string/add_drink_volume_consumed"
                    style="@style/BacEstimatorElmentTitle"/>
                <EditText
                    android:layout_width="112dp"
                    android:id="@+id/edittext_volume_consumed"
                    style="@style/BacEstimatorElmentEditText"
                    android:layout_below="@+id/text_volume_consumed" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_ml"
                    android:text="@string/add_drink_ml"
                    style="@style/BacEstimatorElmentSmallTitle"
                    android:layout_centerHorizontal="true" />

                <Switch
                    android:id="@+id/switch_ml"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/text_ml"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:layout_alignParentRight="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_percentage"
                    android:text="@string/add_drink_percentage"
                    style="@style/BacEstimatorElmentTitle"/>
                <EditText
                    android:layout_width="70dp"
                    android:id="@+id/edittext_percentage"
                    style="@style/BacEstimatorElmentEditText"
                    android:layout_below="@+id/text_percentage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_percentage_unit"
                    android:text="@string/add_drink_percentage_unit"
                    style="@style/BacEstimatorElmentSmallTitle"
                    android:layout_alignTop="@+id/edittext_percentage"
                    android:layout_toRightOf="@+id/edittext_percentage"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="8dp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_question"
                android:text="@string/add_drink_question"
                style="@style/BacEstimatorElmentTitle"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_now"
                android:text="@string/add_drink_now"
                style="@style/BacEstimatorElmentSmallTitle"
                android:layout_toLeftOf="@+id/checkBox_now"
                android:layout_centerVertical="true"
                android:layout_marginRight="3dp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox_now"
                android:alpha="0.7"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/AddDrinkSelectDateLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_select_date_time"
                    android:text="@string/add_drink_select_date_time"
                    style="@style/ButtonText"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/icn_dropdown"
                    android:id="@+id/imageView"
                    android:layout_weight="1"
                    android:layout_marginLeft="12dp"
                    android:layout_gravity="center_vertical" />


            </LinearLayout>
        </RelativeLayout>

        <Button
            android:text="@string/add_drink_button"
            android:layout_width="@dimen/main_normal_button_width"
            android:layout_height="@dimen/main_normal_button_height"
            android:id="@+id/button_add_drink"
            style="@style/AddDrinkButton"/>
    </LinearLayout>

</LinearLayout>

