<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BacEstimatorLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:text="@string/bac_estimator_text"
            android:layout_gravity="center_horizontal"
            style="@style/InfoTitleText"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_age"
                        android:text="@string/bac_estimator_age"
                        style="@style/BacEstimatorElmentTitle"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/edittext_age"
                        style="@style/BacEstimatorElmentEditText"
                        android:layout_below="@+id/text_age" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_gender"
                        android:text="@string/bac_estimator_gender"
                        style="@style/BacEstimatorElmentTitle"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_male"
                                android:text="@string/bac_estimator_checkbox_gender_male"
                                style="@style/BacEstimatorCheckBoxText"/>
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBox_gender_male"
                                android:layout_toRightOf="@+id/text_male"
                                android:layout_marginLeft="12dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_female"
                                android:text="@string/bac_estimator_checkbox_gender_female"
                                style="@style/BacEstimatorCheckBoxText"
                                android:layout_toLeftOf="@+id/checkBox_gender_female"
                                android:layout_marginRight="12dp" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBox_gender_female"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true" />
                        </RelativeLayout>


                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bac_estimator_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_height"
                            android:text="@string/bac_estimator_height"
                            style="@style/BacEstimatorElmentTitle"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="match_parent"
                            android:id="@+id/edittext_height"
                            style="@style/BacEstimatorElmentEditText"
                            android:layout_below="@+id/text_height"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_in"
                            android:text="@string/bac_estimator_in"
                            style="@style/BacEstimatorElmentSmallTitle"
                            android:layout_centerHorizontal="true" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/switch_in"
                            android:layout_below="@+id/text_in"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="12dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_weight"
                            android:text="@string/bac_estimator_weight"
                            style="@style/BacEstimatorElmentTitle"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="match_parent"
                            android:id="@+id/edittext_weight"
                            style="@style/BacEstimatorElmentEditText"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_lbs"
                            android:text="@string/bac_estimator_lbs"
                            style="@style/BacEstimatorElmentSmallTitle"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="10dp" />

                        <Switch
                            android:id="@+id/switch_lbs"
                            android:layout_width="wrap_content"
                            android:layout_below="@+id/text_lbs"
                            android:layout_marginTop="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>